crates/engram-cli/tests/snapshots/renderer/engram_cli__output__tests__warning__plain.snap
---
source: crates/engram-cli/src/output.rs
expression: rendered
---
--- stdout ---
--- stderr ---
Warning: proceed with care
