crates/engram-cli/tests/snapshots/renderer/engram_cli__output__tests__warning__pretty_color.snap
---
source: crates/engram-cli/src/output.rs
expression: rendered
---
--- stdout ---
--- stderr ---
<yellow>⚠</yellow> <yellow>proceed with care</yellow>
